--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,8 @@
             position: absolute;
             top: 0;
             left: 0;
+            width: 100%; /* Asegura que cubra todo el contenedor */
+            height: 100%; /* Asegura que cubra todo el contenedor */
             opacity: 0;
             transition: opacity 1s ease-in-out;
             z-index: 10;
@@ -251,10 +253,10 @@
         <section class="max-w-full mx-auto overflow-hidden relative shadow-lg animate-scroll-reveal" style="height: 75vh; min-height: 550px;">
             <div id="banner-carousel" class="w-full h-full">
                 <div class="carousel-item active w-full h-full">
-                    <img src="https://cdn.shopify.com/s/files/1/0533/2089/files/banner_principal_1.jpg?v=1700000000" alt="Banner Principal 1" class="w-full h-full object-cover">
+                    <img src="https://images.unsplash.com/photo-1543269664-56b93a02a768?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Banner Principal 1" class="w-full h-full object-cover">
                 </div>
                 <div class="carousel-item w-full h-full">
-                    <img src="https://cdn.shopify.com/s/files/1/0533/2089/files/banner_principal_2.jpg?v=1700000000" alt="Banner Principal 2" class="w-full h-full object-cover">
+                    <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Banner Principal 2" class="w-full h-full object-cover">
                 </div>
             </div>
             
